<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:paddingTop="48dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_m"
            android:inputType="textPersonName"
            android:fontFamily="@font/montserrat_regular" />

        <Button
            android:id="@+id/btn_select_industry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FFEB3B"
            android:text="@string/go_who"
            android:textColor="#212121"
            android:fontFamily="@font/montserrat_medium" />

        <TextView
            android:id="@+id/tv_selected_industry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/who_chck"
            android:textColor="#757575"
            android:fontFamily="@font/montserrat_regular" />

        <EditText
            android:id="@+id/edit_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/rate"
            android:inputType="numberDecimal"
            android:fontFamily="@font/montserrat_regular" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/min_val"
            android:inputType="numberDecimal"
            android:fontFamily="@font/montserrat_regular" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/about"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:fontFamily="@font/montserrat_regular" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFC107"
            android:text="@string/add_m"
            android:textColor="#212121"
            android:fontFamily="@font/montserrat_medium" />
    </LinearLayout>
</ScrollView>