<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:paddingTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_bold"/>

        <EditText
            android:id="@+id/amount_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/sum"
            android:inputType="numberDecimal"
            android:fontFamily="@font/montserrat_regular"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_100"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_100"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/montserrat_medium"/>

            <Button
                android:id="@+id/btn_500"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_500"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/montserrat_medium"/>

            <Button
                android:id="@+id/btn_1000"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1000"
                android:fontFamily="@font/montserrat_medium"/>
        </LinearLayout>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFEB3B"
            android:text="@string/Done"
            android:textColor="#212121"
            android:fontFamily="@font/montserrat_medium"/>
    </LinearLayout>
</ScrollView>