<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Фон-картинка -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/wp"
        android:contentDescription="@null" />

    <!-- Основной контент поверх -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:paddingTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_master"
            android:textSize="24sp"
            android:textColor="#212121"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fast_search"
                    android:textSize="18sp"
                    android:textColor="#212121"
                    android:fontFamily="@font/montserrat_regular" />

                <Button
                    android:id="@+id/start_search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/start_search"
                    android:backgroundTint="@color/primary_yellow"
                    android:textColor="#212121"
                    android:fontFamily="@font/montserrat_medium" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</FrameLayout>
